# ReDeLEx

./: .gitignore  .pre-commit-config.yaml  README.md  environment.yml  pyproject.toml
.github/workflows/: publish-to-pypi.yml
ctu_relational/: __init__.py
ctu_relational/datasets/: __init__.py  ctu-dataset-info.csv  ctu_base_dataset.py  ctu_datasets.py  db_dataset.py
ctu_relational/db/: column_types.py  db_inspector.py
ctu_relational/nn/: dbformer.py  pretrain_wrappers.py  rdl_model.py  sagegnn.py  tabular.py  utils.py
ctu_relational/tasks/: __init__.py  ctu_base_task.py  ctu_entity_task.py  ctu_entity_task_base.py  ctu_entity_task_classic.py  ctu_entity_task_temporal.py  ctu_link_task.py  ctu_tasks.py
ctu_relational/utils/: __init__.py  autodetect_schema.py  datetime.py  merge.py
experiments/: corruptors.py  dbgnn_hyperparams.py  dbgnn_nopretrain.py  dbgnn_pretrain.py  gbdt_hyperparams.py  getml_xgboost.py  resnet_sage_hyperparams.py  sage_baseline.py  sage_hyperparams.py  sage_hyperparams_num_layers.py  tabular_hyperparams.py  utils.py
experiments/baseline/: baseline.ipynb
experiments/nn/: dbformer.py  losses.py  pretrain.py  pretrain_wrappers.py  rdl_model.py  sagegnn.py  tabular.py
experiments/scripts/: ray_run_resnet_sage_hyperparams.sh  ray_run_sage_baseline.sh  ray_run_sage_hyperparm_num_layers.sh  slurm_cpu_big_run_lightgmb_aggregate_hyperparams.sh  slurm_cpu_big_run_lightgmb_hyperparams.sh  slurm_cpu_big_xl_run_lightgmb_aggregate_hyperparams.sh  slurm_cpu_big_xl_run_lightgmb_hyperparams.sh  slurm_cpu_run_lightgmb_aggregate_hyperparams.sh  slurm_cpu_run_lightgmb_hyperparams.sh  slurm_cpu_run_linear_dbformer_hyperparams.sh  slurm_cpu_run_linear_sage_hyperparams.sh  slurm_cpu_run_linear_tabular_aggregate_hyperparams.sh  slurm_cpu_run_linear_tabular_hyperparams.sh  slurm_cpu_run_resnet_sage_hyperparams.sh  slurm_cpu_run_resnet_tabular_aggregate_hyperparams.sh  slurm_cpu_run_resnet_tabular_hyperparams.sh  slurm_gpu_big_run_linear_dbformer_hyperparams.sh  slurm_gpu_big_run_linear_sage_hyperparams.sh  slurm_gpu_big_run_linear_tabular_aggregate_hyperparams.sh  slurm_gpu_big_run_linear_tabular_hyperparams.sh  slurm_gpu_big_run_resnet_tabular_aggregate_hyperparams.sh  slurm_gpu_big_run_resnet_tabular_hyperparams.sh  slurm_gpu_run_linear_dbformer_hyperparams.sh  slurm_gpu_run_linear_sage_hyperparams.sh  slurm_gpu_run_linear_tabular_aggregate_hyperparams.sh  slurm_gpu_run_linear_tabular_hyperparams.sh  slurm_gpu_run_resnet_sage_hyperparams.sh  slurm_gpu_run_resnet_tabular_aggregate_hyperparams.sh  (+1 more)
notebooks/: dataset-features.ipynb
scripts/: dataset-info.py  materialize.py
(+20 files in other folders)
