[build-system]
requires = ["flit_core>=3.4"]
build-backend = "flit_core.buildapi"

[project]
name = "ctu_relational"
version = "0.3.1"
description = "CTU Relational: SQL Database Datasets for Machine Learning"
authors = [{name = "Jakub Peleška", email = "jakub.peleska@fel.cvut.cz"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
	"License :: OSI Approved :: MIT License",
]
requires-python=">=3.10"
keywords=[]
dependencies=[
	"relbench",
	"pandas",
	"sqlalchemy",
	"pymysql",
	"tqdm",
	"inflect",
]

[project.urls]
Homepage = "https://github.com/jakubpeleska/ctu-relational-py"
Issues = "https://github.com/jakubpeleska/ctu-relational-py/issues"

[tool.ruff]
line-length = 92
target-version = "py310"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]
lint = [
    "ruff>=0.11.2",
]
